[FIX] Input gap & shadow color

--- a/DOM/css/ejercicio4.css
+++ b/DOM/css/ejercicio4.css
@@ -8,13 +8,13 @@ html {
     text-align: center;
     padding: 2rem;
     background-color: white;
-    box-shadow: 0 0 5px #ccc;
+    box-shadow: 0 0 5px #c2c2c2;
     border-radius: 5px;
 }
 
 #courses>div {
     display: flex;
-    gap: 1rem;
+    gap: 1.2rem;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
